k8s/app.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nagp-k8-demo-app-service

spec:
  selector:
    app: nagp-k8-demo-app

  ports:
    - port: 80
      targetPort: 5000
